--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
 
 services:
   nginx:
-    image: anolis-registry.cn-zhangjiakou.cr.aliyuncs.com/openanolis/nginx:1.14.1-8.6
+    image: nginx:latest # Original image
     container_name: nginx
     ports:
-      - 80:80
+      - 80:80 # Map port 80 on the host to port 80 on the container
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf # Mount the local nginx.conf file to the container
     depends_on:
-      - hello
+      - hello # Wait for the hello service to be ready before starting the nginx service
   hello:
-    build: .
+    build: . # Build the image from the Dockerfile in the current directory
     container_name: hello
+    expose:
+      - 8080 # Expose port 8080 on the container, allowing other services to access it
